fix bottom right div overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -129,7 +129,7 @@ button {
 
 .right-child-bottom {
     overflow-y: auto;
-    height: 23.5em;
+    height: 20em;
     margin: 0;
 }
 
